--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/HBC 4441/HBC 4441.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/HBC 4441/HBC 4441.html
@@ -265,7 +265,7 @@
                 </div>
                 <div class="dato-item">
                 <span class="dato-label">Prenda industrial:</span>
-                <span class="dato-value clean" style="color: red;">SI</span>
+                <span class="dato-value clean">No</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Prohibiciòn. enajenar:</span>
