--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/GLN 0734/GLN 0734.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/GLN 0734/GLN 0734.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
-            <p class="precio">$6,900</p>
+            <h1>VOLKSWAGEN GOL 1.8 4P CONFORT</h1>
+            <p class="precio">$3,900</p>
             <div class="detalles">
-                <span>2012</span>
-                <span>Placa: A</span>
+                <span>2002</span>
+                <span>Placa: G</span>
             </div>
         </div>
 
@@ -74,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">HYUNDAI</span>
+                    <span class="info-value">VOLKSWAGEN</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 CM 5DR 1.1</span>
+                    <span class="info-value">GOL 1.8 4P CONFORT</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -86,11 +86,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">sedan</span>
+                    <span class="info-value">Hatchback</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2012</span>
+                    <span class="info-value">2015</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -98,11 +98,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Plomo</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Azuay</span>
+                    <span class="info-value">Guayas</span>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>El Volkswagen Gol 1.8 4P Confort 2002 es un hatchback compacto de 4 puertas con motor 1.8 litros a gasolina, tracción delantera y transmisión manual. Es un auto práctico y confiable, pensado para uso urbano y familiar, con buen desempeño para su cilindrada, manejo sencillo y mantenimiento accesible. Ideal para quienes buscan un vehículo diario con equilibrio entre potencia y economía.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -197,11 +197,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">Archidona</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$316.00</span>
                 </div>
             </div>
         </div>
