--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/JBA 5801/JBA 5801.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/JBA 5801/JBA 5801.html
@@ -50,20 +50,21 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
-            <p class="precio">$6,900</p>
+            <h1>FIAT STRADA FIRE 1242 MPI 8V CB CORTA</h1>
+            <p class="precio">$3,900</p>
             <div class="detalles">
-                <span>2012</span>
+                <span>2004</span>
+                <span>330.000 Kms</span>
                 <span>Placa: A</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -74,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">HYUNDAI</span>
+                    <span class="info-value">fiat</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 CM 5DR 1.1</span>
+                    <span class="info-value">STRADA FIRE 1242 MPI 8V CB CORTA</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -86,11 +87,15 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">sedan</span>
+                    <span class="info-value">Pickup</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Kilometraje:</span>
+                    <span class="info-value">330.000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2012</span>
+                    <span class="info-value">2004</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -98,7 +103,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Rojo</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -110,7 +115,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>La Fiat Strada 1.2 Fire 2004 es una pickup compacta con motor 1.2L 8V (73 HP), transmisión manual y cabina corta (CB). Ideal para carga ligera y uso urbano, destaca por su bajo consumo y mantenimiento económico.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +125,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/I10.mp4" type="video/mp4">
+                        <source src="imgs/fiat.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -152,16 +157,9 @@
                         <a href="https://wa.me/593969008638" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR DAVID
                         </a>
-                        <a href="https://wa.me/593995357375" class="btn-contacto" target="_blank">
-                            <i class="bi bi-whatsapp"></i> ASESORA PATRICIA
-                        </a>
                         
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
-                        </a>
-
-                        <a href="https://wa.me/593990073550" class="btn-contacto" target="_blank">
-                            <i class="bi bi-whatsapp"></i> ASESORA PAMELA
                         </a>
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
@@ -179,11 +177,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">0 multa</span>
+                    <span class="dato-value">1 multa</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$00.00</span>
+                    <span class="dato-value">$80.00</span>
                 </div>
             </div>
         </div>
@@ -193,15 +191,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2025</span>
+                    <span class="dato-value">2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$126.34</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">Quito - Puerto Quito</span>
                 </div>
             </div>
         </div>
@@ -239,7 +237,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">8 dueños</span>
                 </div>
             </div>
         </div>
