--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/IAI 0163/IAI 0163.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/IAI 0163/IAI 0163.html
@@ -179,11 +179,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">0 multa</span>
+                    <span class="dato-value">1 multa</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$00.00</span>
+                    <span class="dato-value">$135.00</span>
                 </div>
             </div>
         </div>
@@ -197,11 +197,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">----</span>
+                    <span class="dato-value">$139.87</span>
                 </div>
                 <div class="dato-item">
-                    <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">----</span>
+                    <span class="dato-label">Revision:</span>
+                    <span class="dato-value">Alfredo Baquerizo</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">$46.56</span>
                 </div>
             </div>
         </div>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">----</span>
+                    <span class="dato-value">5 dueños</span>
                 </div>
             </div>
         </div>
