--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PDU 0791/PDU 0791.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PDU 0791/PDU 0791.html
@@ -197,11 +197,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$146.82</span>
+                    <span class="dato-value">$207.87</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">QGAD OLMEDO</span>
+                    <span class="dato-value">GAD OLMEDO</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$336.00</span>
+                    <span class="dato-value">$341.00</span>
                 </div>
             </div>
         </div>
