--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PQE 0703/PQE 0703.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PQE 0703/PQE 0703.html
@@ -193,19 +193,19 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2025</span>
+                    <span class="dato-value">2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$219.30</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">Ibarra</span>
                 </div>
             </div>
         </div>
-
+ 
         <div class="seccion-datos">
             <h3><i class="bi bi-gear"></i> Revisión Vehicular</h3>
             <div class="datos-grid">
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$246.56</span>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">7 dueños</span>
                 </div>
             </div>
         </div>
