--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PTS 0241/PTS 0241.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PTS 0241/PTS 0241.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">----</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -197,11 +197,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">$73.14</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">Puerto Quito</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">----</span>
+                    <span class="dato-value">$161.56</span>
                 </div>
             </div>
         </div>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">----</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">----</span>
+                    <span class="dato-value">4 dueños</span>
                 </div>
             </div>
         </div>
