--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBL 5108/PBL 5108.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBL 5108/PBL 5108.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$----</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -193,15 +193,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">2023</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">$313.64</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">Quito</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$---</span>
+                    <span class="dato-value">$91.56</span>
                 </div>
             </div>
         </div>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">00.00</span>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">1 dueño</span>
                 </div>
             </div>
         </div>
