--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PLD 0426/PLD 0426.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PLD 0426/PLD 0426.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -193,15 +193,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">$333.50</span>
                 </div>
                 <div class="dato-item">
-                    <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-label">Revision:</span>
+                    <span class="dato-value">24 DE MAYO</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">$333.56</span>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">1 dueño</span>
                 </div>
             </div>
         </div>
