--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/TPB 1671/TPB 1671.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/TPB 1671/TPB 1671.html
@@ -195,15 +195,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">2022</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$---</span>
+                    <span class="dato-value">$470.06</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">Ibarra</span>
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">$426.56</span>
                 </div>
             </div>
         </div>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -241,7 +241,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">8 dueños</span>
                 </div>
             </div>
         </div>
