santa fe y picanto

--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/POF 0789/POF 0789.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/POF 0789/POF 0789.html
@@ -51,7 +51,7 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>HYUNDAI SANTA FE 4X2 T/M</h1>
-            <p class="precio">$5,500</p>
+            <p class="precio">$4,900</p>
             <div class="detalles">
                 <span>2001</span>
                 <span>Placa: p</span>
@@ -193,15 +193,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2025</span>
+                    <span class="dato-value">2022</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">$523.34</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">-----</span>
+                    <span class="dato-value">Muisne</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">------</span>
+                    <span class="dato-value">$351.56</span>
                 </div>
             </div>
         </div>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">---</span>
+                    <span class="dato-value">$45.00</span>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">----</span>
+                    <span class="dato-value">12 dueños</span>
                 </div>
             </div>
         </div>
