--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBI 5021/PBI 5021.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBI 5021/PBI 5021.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>RENAULT KWID INTENS AC 1.0 5P 4X2 TM</h1>
-            <p class="precio">$10,900</p>
+            <h1>FIAT FIORINO FIRE 1.3</h1>
+            <p class="precio">$5,900</p>
             <div class="detalles">
-                <span>2023</span>
-                <span>Placa: p</span>
+                <span>2010</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
@@ -64,6 +64,7 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -74,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">RENAULT</span>
+                    <span class="info-value">FIAT</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">KWID INTENS AC 1.0 5P 4X2 TM</span>
+                    <span class="info-value">FIORINO FIRE 1.3</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -86,11 +87,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Hatchback</span>
+                    <span class="info-value">Pickup</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2023</span>
+                    <span class="info-value">2010</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -98,7 +99,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Rojo</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -110,7 +111,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Renault Kwid Intens AC 1.0 5P 4×2 TM 2023 es un hatchback subcompacto de 5 puertas con motor 1.0 litros a gasolina, tracción delantera (4×2), transmisión manual y aire acondicionado. Está diseñado para ofrecer una conducción urbana eficiente y económica, con bajo consumo de combustible, tamaño compacto para facilitar el tráfico y estacionamiento, y un interior funcional con equipamiento moderno para su segmento. Es ideal para uso diario, ciudad o primeros autos.</p>
+            <p>El Fiat Fiorino Fire 1.3 2010 es una furgoneta comercial ligera con motor 1.3 litros a gasolina, tracción delantera y transmisión manual. Está diseñada para uso de trabajo y transporte de carga ligera, ofreciendo un interior práctico, bajo consumo de combustible y mantenimiento accesible. Ideal para reparto urbano, pequeños negocios o transporte de mercancías dentro de la ciudad o áreas cercanas.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +121,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/azd.mp4" type="video/mp4">
+                        <source src="imgs/asd.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -193,11 +194,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$385.11</span>
+                    <span class="dato-value">$91.36</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
@@ -215,7 +216,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$186.56</span>
+                    <span class="dato-value">$66.56</span>
                 </div>
             </div>
         </div>
@@ -239,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">1 dueño</span>
+                    <span class="dato-value">2 dueños</span>
                 </div>
             </div>
         </div>
