--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/IBB 3201/IBB 3201.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/IBB 3201/IBB 3201.html
@@ -54,7 +54,7 @@
             <p class="precio">$11,500</p>
             <div class="detalles">
                 <span>2012</span>
-                <span>Placa: P</span>
+                <span>Placa: I</span>
             </div>
         </div>
 
@@ -102,7 +102,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Pichincha</span>
+                    <span class="info-value">Ibarra</span>
                 </div>
             </div>
         </div>
