--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/QAA 1070/QAA 1070.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/QAA 1070/QAA 1070.html
@@ -51,7 +51,7 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>MAZDA 2 SEDAN 1.5 MT</h1>
-            <p class="precio">$6,600</p>
+            <p class="precio">$6,700</p>
             <div class="detalles">
                 <span>2011</span>
                 <span>Placa: Q</span>
@@ -60,7 +60,7 @@
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
             <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
@@ -193,11 +193,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2026</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$267.92</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$71.00</span>
+                    <span class="dato-value">$71.56</span>
                 </div>
             </div>
         </div>
