--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBB 0775/PBB 0775.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBB 0775/PBB 0775.html
@@ -51,10 +51,9 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>NISSAN X-TRAIL M/T</h1>
-            <p class="precio">$6,500</p>
+            <p class="precio">$6,900</p>
             <div class="detalles">
                 <span>2002</span>
-                <span>190.000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -65,6 +64,7 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -87,11 +87,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SUV</span>
-                </div>
-                <div class="info-item">
-                    <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">190.000 km</span>
+                    <span class="info-value">Suv</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -103,7 +99,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Negro</span>
+                    <span class="info-value">Plomo</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -115,7 +111,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Nissan X‑Trail 2002 en versión manual (M/T) es un SUV compacto robusto con tracción total (conectable), motor gasolina 2.0 L de 140 CV, caja manual de 5 velocidades</p>
+            <p>El Nissan X-Trail M/T 2002 es un SUV compacto de 5 puertas con transmisión manual (M/T), motor a gasolina, tracción delantera o 4×4 (según versión) y un diseño pensado para combinar espacio interior, confort y versatilidad. Ofrece un interior amplio para pasajeros y carga, buen despeje al suelo y capacidad para manejo tanto urbano como por carretera. Es una opción práctica para familias o uso cotidiano con un enfoque en funcionalidad y conducción sencilla.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -157,9 +153,16 @@
                         <a href="https://wa.me/593969008638" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR DAVID
                         </a>
+                        <a href="https://wa.me/593995357375" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESORA PATRICIA
+                        </a>
                         
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
+                        </a>
+
+                        <a href="https://wa.me/593990073550" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESORA PAMELA
                         </a>
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
@@ -191,15 +194,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$147.34</span>
+                    <span class="dato-value">$108.34</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">GAD FLAVIO ALFARO</span>
+                    <span class="dato-value">Balzar</span>
                 </div>
             </div>
         </div>
@@ -213,7 +216,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$316.00</span>
+                    <span class="dato-value">$321.56</span>
                 </div>
             </div>
         </div>
@@ -237,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">5 dueños</span>
+                    <span class="dato-value">6 dueños</span>
                 </div>
             </div>
         </div>
